# dbt-cli-mcp

./: .gitignore  Dockerfile  README.md  fix_integration_tests.py  fix_main_functions.py  fix_return_statements.py  hello.py  implementation_plan.md  implementation_plan_dbt_centralized_error_handling.md  integration_tests_plan.md  pyproject.toml  smithery.yaml  test_server.py
dbt_cli_mcp/: command.py  config.py  server.py  tools.py
integration_tests/: test_dbt_build.py  test_dbt_compile.py  test_dbt_debug.py  test_dbt_deps.py  test_dbt_ls.py  test_dbt_run.py  test_dbt_seed.py  test_dbt_show.py  test_dbt_test.py
src/: cli.py  command.py  formatters.py  tools.py
tests/: test_command.py  test_config.py  test_tools.py
