[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-cli-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for dbt CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["dbt_cli_mcp"]
